[package]
name = "runtime-integration-tests"
version = "0.1.0"
authors = ["Imbue <contact@imbue.network>"]
edition = "2021"
license = "LGPL-3.0"
homepage = "https://imbue.network"
repository = "https://github.com/ImbueNetwork/imbue"


[dependencies]
# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

# Polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-service = {  git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43"  }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43"  }

# Orml pallets
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }

# Local
common-runtime = { path = "../common" }
imbue-kusama-runtime = { path = "../imbue-kusama" }
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }
pallet-proposals = { path = "../../pallets/proposals", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
xcm-emulator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }


[features]
default = []
runtime-benchmarks = [
    "default",
    "frame-benchmarking/runtime-benchmarks",
    "kusama-runtime/runtime-benchmarks",
    "imbue-kusama-runtime/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-tokens/runtime-benchmarks",
    "orml-xtokens/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "polkadot-parachain/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-proposals/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    
]