[package]
name = "runtime-integration-tests"
version = "0.1.0"
authors = ["Imbue <contact@imbue.network>"]
edition = "2021"
license = "LGPL-3.0"
homepage = "https://imbue.network"
repository = "https://github.com/ImbueNetwork/imbue"


[dependencies]
# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-service = {  git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0"  }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0"  }

# Orml pallets
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.0.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.0.0" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.0.0" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.0.0" }

# Local
common-runtime = { path = "../common" }
imbue-kusama-runtime = { path = "../imbue-kusama" }
common-traits = { path = "../../libs/common-traits", default-features = false }
common-types = { path = "../../libs/common-types", default-features = false }
pallet-proposals = { path = "../../pallets/proposals", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
xcm-emulator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
polkadot-test-service = {  git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false }


[features]
default = []
runtime-benchmarks = [
    "default",
    "frame-benchmarking/runtime-benchmarks",
    "kusama-runtime/runtime-benchmarks",
    "imbue-kusama-runtime/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-tokens/runtime-benchmarks",
    "orml-xtokens/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "polkadot-parachain/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "polkadot-test-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-proposals/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
]
